// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status test suite should render NRequest properly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
        Object {
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Title
        style={
          Array [
            Object {
              "marginRight": 6,
            },
            Object {
              "color": "#F9FAFB",
            },
          ]
        }
      >
        GET
      </Title>
      <View
        style={
          Array [
            Object {
              "borderRadius": 4,
              "fontSize": 12,
              "height": 22,
              "justifyContent": "center",
              "width": 30,
            },
            Object {
              "backgroundColor": "#B91C1C",
            },
          ]
        }
        testID="statusCodeColor"
      >
        <Text
          style={
            Array [
              Object {
                "textAlign": "center",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          500
        </Text>
      </View>
    </View>
    <MockRequestButton
      onPress={[Function]}
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Hostname : 
    </Text>
    <Text>
      run.mocky.io
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Started at : 
    </Text>
    <Text>
      16/02/2021 - 12:12:54   ( 1015ms )
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Timeout : 
    </Text>
    <Text>
      0
    </Text>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Request Info
  </Subheading>
  <View
    key="0"
    style={
      Object {
        "marginBottom": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#6B7280",
            },
          ]
        }
      >
        url
      </Text>
      <ClipboardButton
        onPress={[Function]}
      />
    </View>
    <Text
      style={
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "color": "#F9FAFB",
          },
        ]
      }
    >
      https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
    </Text>
  </View>
  <View
    key="1"
    style={
      Object {
        "marginBottom": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#6B7280",
            },
          ]
        }
      >
        responseURL
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "color": "#F9FAFB",
          },
        ]
      }
    >
      https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
    </Text>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Request Data
  </Subheading>
  <View
    style={
      Object {
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      dataSent
    </Text>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Response Body
  </Subheading>
  <View
    style={
      Object {
        "flexDirection": "row-reverse",
        "paddingHorizontal": 16,
      }
    }
  >
    <ClipboardButton
      onPress={[Function]}
    />
  </View>
  <View
    style={
      Object {
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      response
    </Text>
  </View>
</View>
`;

exports[`Status test suite should render properly with request with headers 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
        Object {
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Title
        style={
          Array [
            Object {
              "marginRight": 6,
            },
            Object {
              "color": "#F9FAFB",
            },
          ]
        }
      >
        GET
      </Title>
      <View
        style={
          Array [
            Object {
              "borderRadius": 4,
              "fontSize": 12,
              "height": 22,
              "justifyContent": "center",
              "width": 30,
            },
            Object {
              "backgroundColor": "#D97706",
            },
          ]
        }
        testID="statusCodeColor"
      >
        <Text
          style={
            Array [
              Object {
                "textAlign": "center",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          301
        </Text>
      </View>
    </View>
    <MockRequestButton
      onPress={[Function]}
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Hostname : 
    </Text>
    <Text>
      run.mocky.io
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Started at : 
    </Text>
    <Text>
      16/02/2021 - 12:12:54   ( 1015ms )
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Timeout : 
    </Text>
    <Text>
      0
    </Text>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Request Info
  </Subheading>
  <View
    key="0"
    style={
      Object {
        "marginBottom": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#6B7280",
            },
          ]
        }
      >
        url
      </Text>
      <ClipboardButton
        onPress={[Function]}
      />
    </View>
    <Text
      style={
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "color": "#F9FAFB",
          },
        ]
      }
    >
      https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
    </Text>
  </View>
  <View
    key="1"
    style={
      Object {
        "marginBottom": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#6B7280",
            },
          ]
        }
      >
        responseURL
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "color": "#F9FAFB",
          },
        ]
      }
    >
      https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
    </Text>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Request Data
  </Subheading>
  <View
    style={
      Object {
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      dataSent
    </Text>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Response Body
  </Subheading>
  <View
    style={
      Object {
        "flexDirection": "row-reverse",
        "paddingHorizontal": 16,
      }
    }
  >
    <ClipboardButton
      onPress={[Function]}
    />
  </View>
  <View
    style={
      Object {
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      response
    </Text>
  </View>
</View>
`;

exports[`Status test suite should render properly with request with image 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
        Object {
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Title
        style={
          Array [
            Object {
              "marginRight": 6,
            },
            Object {
              "color": "#F9FAFB",
            },
          ]
        }
      >
        GET
      </Title>
      <View
        style={
          Array [
            Object {
              "borderRadius": 4,
              "fontSize": 12,
              "height": 22,
              "justifyContent": "center",
              "width": 30,
            },
            Object {
              "backgroundColor": "#4D7C0F",
            },
          ]
        }
        testID="statusCodeColor"
      >
        <Text
          style={
            Array [
              Object {
                "textAlign": "center",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          200
        </Text>
      </View>
    </View>
    <MockRequestButton
      onPress={[Function]}
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Hostname : 
    </Text>
    <Text>
      image
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Started at : 
    </Text>
    <Text>
      16/02/2021 - 12:12:54   ( 1015ms )
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Timeout : 
    </Text>
    <Text>
      0
    </Text>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Request Info
  </Subheading>
  <View
    key="0"
    style={
      Object {
        "marginBottom": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 100,
        }
      }
    >
      <Image
        onError={[Function]}
        resizeMode="contain"
        source={
          Object {
            "uri": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg==",
          }
        }
        style={
          Object {
            "height": "100%",
            "width": "80%",
          }
        }
      />
    </View>
  </View>
  <View
    key="1"
    style={
      Object {
        "marginBottom": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 100,
        }
      }
    >
      <Image
        onError={[Function]}
        resizeMode="contain"
        source={
          Object {
            "uri": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg==",
          }
        }
        style={
          Object {
            "height": "100%",
            "width": "80%",
          }
        }
      />
    </View>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Request Data
  </Subheading>
  <View
    style={
      Object {
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      dataSent
    </Text>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Response Body
  </Subheading>
  <View
    style={
      Object {
        "flexDirection": "row-reverse",
        "paddingHorizontal": 16,
      }
    }
  >
    <ClipboardButton
      onPress={[Function]}
    />
  </View>
  <View
    style={
      Object {
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      response
    </Text>
  </View>
</View>
`;

exports[`Status test suite should render properly with request with image 2`] = `
<View
  style={
    Object {
      "flex": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
        Object {
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Title
        style={
          Array [
            Object {
              "marginRight": 6,
            },
            Object {
              "color": "#F9FAFB",
            },
          ]
        }
      >
        GET
      </Title>
      <View
        style={
          Array [
            Object {
              "borderRadius": 4,
              "fontSize": 12,
              "height": 22,
              "justifyContent": "center",
              "width": 30,
            },
            Object {
              "backgroundColor": "#4D7C0F",
            },
          ]
        }
        testID="statusCodeColor"
      >
        <Text
          style={
            Array [
              Object {
                "textAlign": "center",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          200
        </Text>
      </View>
    </View>
    <MockRequestButton
      onPress={[Function]}
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Hostname : 
    </Text>
    <Text>
      image
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Started at : 
    </Text>
    <Text>
      16/02/2021 - 12:12:54   ( 1015ms )
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Timeout : 
    </Text>
    <Text>
      0
    </Text>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Request Info
  </Subheading>
  <View
    key="0"
    style={
      Object {
        "marginBottom": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 100,
        }
      }
    >
      <Image
        onError={[Function]}
        resizeMode="contain"
        source={
          Object {
            "uri": "data:image/png;-,",
          }
        }
        style={
          Object {
            "height": "100%",
            "width": "80%",
          }
        }
      />
    </View>
  </View>
  <View
    key="1"
    style={
      Object {
        "marginBottom": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 100,
        }
      }
    >
      <Image
        onError={[Function]}
        resizeMode="contain"
        source={
          Object {
            "uri": "data:image/png;base64,",
          }
        }
        style={
          Object {
            "height": "100%",
            "width": "80%",
          }
        }
      />
    </View>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Request Data
  </Subheading>
  <View
    style={
      Object {
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      dataSent
    </Text>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Response Body
  </Subheading>
  <View
    style={
      Object {
        "flexDirection": "row-reverse",
        "paddingHorizontal": 16,
      }
    }
  >
    <ClipboardButton
      onPress={[Function]}
    />
  </View>
  <View
    style={
      Object {
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      response
    </Text>
  </View>
</View>
`;

exports[`Status test suite should render request 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
        Object {
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Title
        style={
          Array [
            Object {
              "marginRight": 6,
            },
            Object {
              "color": "#F9FAFB",
            },
          ]
        }
      >
        GET
      </Title>
      <View
        style={
          Array [
            Object {
              "borderRadius": 4,
              "fontSize": 12,
              "height": 22,
              "justifyContent": "center",
              "width": 30,
            },
            Object {
              "backgroundColor": "#4D7C0F",
            },
          ]
        }
        testID="statusCodeColor"
      >
        <Text
          style={
            Array [
              Object {
                "textAlign": "center",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          200
        </Text>
      </View>
    </View>
    <MockRequestButton
      onPress={[Function]}
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Hostname : 
    </Text>
    <Text>
      run.mocky.io
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Started at : 
    </Text>
    <Text>
      16/02/2021 - 12:12:54   ( 1015ms )
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#6B7280",
        }
      }
    >
      Timeout : 
    </Text>
    <Text>
      0
    </Text>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Request Info
  </Subheading>
  <View
    key="0"
    style={
      Object {
        "marginBottom": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#6B7280",
            },
          ]
        }
      >
        url
      </Text>
      <ClipboardButton
        onPress={[Function]}
      />
    </View>
    <Text
      style={
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "color": "#F9FAFB",
          },
        ]
      }
    >
      https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
    </Text>
  </View>
  <View
    key="1"
    style={
      Object {
        "marginBottom": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#6B7280",
            },
          ]
        }
      >
        responseURL
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "color": "#F9FAFB",
          },
        ]
      }
    >
      https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
    </Text>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Request Data
  </Subheading>
  <View
    style={
      Object {
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      dataSent
    </Text>
  </View>
  <Subheading
    style={
      Array [
        Object {
          "marginBottom": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "#374151",
          "color": "#F9FAFB",
        },
      ]
    }
  >
    Response Body
  </Subheading>
  <View
    style={
      Object {
        "flexDirection": "row-reverse",
        "paddingHorizontal": 16,
      }
    }
  >
    <ClipboardButton
      onPress={[Function]}
    />
  </View>
  <View
    style={
      Object {
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text>
      response
    </Text>
  </View>
</View>
`;
